# shivarthu_offchain_computing

./: .gitignore  Cargo.toml  README.md
embedded-database/: Cargo.toml
embedded-database/src/: main.rs
index-database/: Cargo.toml
index-database/artifacts/: metadata.scale
index-database/src/: main.rs
index-database/src/index/: events.rs  mod.rs  subscribe_block_number.rs  subscribe_blocks.rs
offchain-server/: Cargo.toml
offchain-server/src/: app_state.rs  main.rs
offchain-server/src/functions/: test_functions.rs
offchain-server/src/todos/: todos.rs
src/: app_state.rs  lib.rs  main.rs
