[workspace]
members = ["embedded-database", "index-database", "offchain-server"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.83"
axum = "0.7.5"
bytes = "1.6.0"
futures-lite = "2.3.0"
iroh = "0.18.0"
iroh-net = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
surrealdb = { version = "1.5.3", features = ["kv-mem", "kv-rocksdb"] }
subxt = "0.37.0"
hex = "0.4.3"
